@@ -15,7 +15,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Map;
 import org.json.JSONException;
 import org.junit.jupiter.api.Test;
@@ -32,7 +32,7 @@ public class NotificationTapiServiceSerializerTest extends AbstractTest {
     void serializeTest() throws IOException, JSONException {
         JsonStringConverter<NotificationTapiService> converter =
                 new JsonStringConverter<>(getDataStoreContextUtil().getBindingDOMCodecServices());
-        String json = Files.readString(Paths.get("src/test/resources/tapi_event.json"));
+        String json = Files.readString(Path.of("src/test/resources/tapi_event.json"));
         NotificationTapiService notificationService = converter
                 .createDataObjectFromJsonString(YangInstanceIdentifier.of(NotificationTapiService.QNAME),
                         json, JSONCodecFactorySupplier.RFC7951);
@@ -42,7 +42,7 @@ public class NotificationTapiServiceSerializerTest extends AbstractTest {
         byte[] data = serializer.serialize("test", notificationService);
         serializer.close();
         assertNotNull(data, "Serialized data should not be null");
-        String expectedJson = Files.readString(Paths.get("src/test/resources/expected_tapi_event.json"));
+        String expectedJson = Files.readString(Path.of("src/test/resources/expected_tapi_event.json"));
         // Minify the json string
         expectedJson = new ObjectMapper().readValue(expectedJson, JsonNode.class).toString();
         JSONAssert.assertEquals(expectedJson, new String(data, StandardCharsets.UTF_8), true);
