@@ -20,7 +20,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import com.github.tomakehurst.wiremock.WireMockServer;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -56,9 +56,7 @@ class GnpyConsumerTest {
     void isAvailableTest() throws IOException {
         // GIVEN
         stubFor(get(urlEqualTo("/api/v1/status"))
-                .willReturn(okJson(Files
-                        .readString(Paths
-                                .get("src", "test", "resources", "gnpy", "gnpy_status.json")))));
+                .willReturn(okJson(Files.readString(Path.of("src", "test", "resources", "gnpy", "gnpy_status.json")))));
 
         // WHEN
         GnpyConsumer gnpyConsumer = new GnpyConsumerImpl("http://localhost:9998",
@@ -78,9 +76,8 @@ class GnpyConsumerTest {
                 .willReturn(aResponse()
                         .withStatus(201)
                         .withHeader("Content-Type", "application/json")
-                        .withBody(Files
-                        .readString(Paths
-                                .get("src", "test", "resources", "gnpy", "gnpy_result_with_path.json")))));
+                        .withBody(Files.readString(
+                                Path.of("src", "test", "resources", "gnpy", "gnpy_result_with_path.json")))));
 
         // WHEN
         GnpyConsumer gnpyConsumer = new GnpyConsumerImpl("http://localhost:9998",
@@ -89,10 +86,10 @@ class GnpyConsumerTest {
                 AbstractTest.getDataStoreContextUtil().getBindingDOMCodecServices());
         QName pathQname = Request.QNAME;
         YangInstanceIdentifier yangId = YangInstanceIdentifier.of(pathQname);
-        Request request = gnpyApiConverter
-                .createDataObjectFromJsonString(yangId,
-                        Files.readString(Paths.get("src/test/resources/gnpy/gnpy_request.json")),
-                        JSONCodecFactorySupplier.DRAFT_LHOTKA_NETMOD_YANG_JSON_02);
+        Request request = gnpyApiConverter.createDataObjectFromJsonString(
+                yangId,
+                Files.readString(Path.of("src/test/resources/gnpy/gnpy_request.json")),
+                JSONCodecFactorySupplier.DRAFT_LHOTKA_NETMOD_YANG_JSON_02);
         Result result = gnpyConsumer.computePaths(request);
 
         // THEN
